tests/baselines/reference/nonPrimitiveInFunction.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInFunction.ts(12,12): error TS2345: Argument of type '真假' is not assignable to parameter of type '实例'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInFunction.ts(13,1): error TS2322: Type '实例' is not assignable to type '真假'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveInFunction.ts(17,5): error TS2322: Type '数字' is not assignable to type '实例'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveInFunction.ts (3 errors) ====
    function takeObject(o: object) {}
    function returnObject(): object {
        return {};
    }
    
    var nonPrimitive: object;
    var primitive: boolean;
    
    takeObject(nonPrimitive);
    nonPrimitive = returnObject();
    
    takeObject(primitive); // expect error
               ~~~~~~~~~
!!! error TS2345: Argument of type '真假' is not assignable to parameter of type '实例'.
    primitive = returnObject(); // expect error
    ~~~~~~~~~
!!! error TS2322: Type '实例' is not assignable to type '真假'.
    
    function returnError(): object {
        var ret = 123;
        return ret; // expect error
        ~~~~~~~~~~~
!!! error TS2322: Type '数字' is not assignable to type '实例'.
    }
    